tests/baselines/reference/restParameterWithBindingPattern4.errors.txt
tests/cases/compiler/restParameterWithBindingPattern4.ts(1,23): error TS1186: A rest element cannot have an initializer.


==== tests/cases/compiler/restParameterWithBindingPattern4.ts (1 errors) ====
    function a(...[...foo = []]: string[]) { }
                          ~
!!! error TS1186: A rest element cannot have an initializer.